--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ on:
     paths:
       - 'Deep-Dive.md'
       - '.github/workflows/convert-markdown-to-pdf.yml'
-      - 'scripts/fix_markdown.sh'  # Watch the fix script for changes
+      - 'scripts/fix_markdown.sh'  # Include the fix script in the watch paths
 
 jobs:
   build:
@@ -30,7 +30,18 @@ jobs:
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
 
-      # 3. Run Markdown Fix Script
+      # 3. Install Node.js
+      - name: Install Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '16'  # Specify the Node.js version
+
+      # 4. Install Markdownlint
+      - name: Install Markdownlint
+        run: |
+          npm install -g markdownlint-cli
+
+      # 5. Run Markdown Fix Script
       - name: Fix Markdown Formatting
         run: |
           # Ensure the script is executable
@@ -38,7 +49,12 @@ jobs:
           # Run the script on Deep-Dive.md with backup option
           scripts/fix_markdown.sh -b Deep-Dive.md
 
-      # 4. Commit and Push Markdown Fixes (if any)
+      # 6. Run Markdownlint to Fix Remaining Issues
+      - name: Run Markdownlint
+        run: |
+          markdownlint Deep-Dive.md --fix
+
+      # 7. Commit and Push Markdown Fixes (if any)
       - name: Commit and Push Markdown Fixes
         run: |
           # Check if Deep-Dive.md was modified
@@ -50,19 +66,19 @@ jobs:
             git push origin main
           fi
 
-      # 5. Install Pandoc and LaTeX Dependencies
+      # 8. Install Pandoc and LaTeX Dependencies
       - name: Install Pandoc and LaTeX
         run: |
           sudo apt-get update
           sudo apt-get install -y pandoc texlive texlive-xetex texlive-latex-extra
 
-      # 6. Convert Markdown to PDF
+      # 9. Convert Markdown to PDF
       - name: Convert Markdown to PDF
         run: |
           mkdir -p pdf
           pandoc Deep-Dive.md -o pdf/Deep-Dive.pdf
 
-      # 7. Commit and Push PDF (if changed)
+      # 10. Commit and Push PDF (if changed)
       - name: Commit and Push PDF
         run: |
           # Check if pdf/Deep-Dive.pdf was modified
