--- a/code/Cargo.toml
+++ b/code/Cargo.toml
@@ -7,3 +7,6 @@ edition = "2021"
 rand = "0.8.5"
 clap = { version = "4.0", features = ["derive"] }
 indicatif = "0.17"
+crossbeam = "0.8.4"
+chrono = "0.4.38"
+csv = "1.3.0"
