--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -71,7 +71,7 @@ jobs:
       - name: Convert Markdown to PDF
         run: |
           mkdir -p pdf
-          pandoc Deep-Dive.md -o pdf/Deep-Dive.pdf
+          pandoc Deep-Dive.md -o pdf/Deep-Dive.pdf --pdf-engine=xelatex
 
       # 10. Commit and Push PDF (if changed)
       - name: Commit and Push PDF
